Tested all modules in POCHI except group modules... Charts and fimcoplatform coming next

--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -92,7 +92,7 @@
                                             <li><a href="{% url 'info' %}">POCHI</a></li>
                                             <li><a href="{% url 'brokerage' %}">Brokerage</a></li>
                                             <li><a href="{% url 'fund' %}">Fund Management</a></li>
-                                            <li><a href="{% url 'markets' %}">Market Information</a></li>
+                                            <li><a href="">Market Information</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
