--- a/fimco/pochi/templates/pochi/account.html
+++ b/fimco/pochi/templates/pochi/account.html
@@ -21,6 +21,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="col-xs-12">
+                            <div class="alert alert-success margin-bottom-30">
+                                <button type="button" class="close" data-dismiss="alert">
+                                    <span aria-hidden="true">×</span>
+                                    <span class="sr-only">Close</span>
+                                </button>
+                                <strong>{{ message }}</strong>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+                </div>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-6 col-lg-offset-4 col-md-offset-2">
                 <div id="bank" class="panel panel-default">
