--- a/fimco/pochi/templates/pochi/deposit.html
+++ b/fimco/pochi/templates/pochi/deposit.html
@@ -212,7 +212,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="col-xs-12">
-                        <div class="alert alert-danger margin-bottom-30">
+                        <div class="alert alert-success margin-bottom-30">
                             <button type="button" class="close" data-dismiss="alert">
                                 <span aria-hidden="true">×</span>
                                 <span class="sr-only">Close</span>
