--- a/fimco/pochi/templates/pochi/group.html
+++ b/fimco/pochi/templates/pochi/group.html
@@ -41,7 +41,7 @@
                                             <div class="form-group">
                                                 <label class="col-xs-3 control-label">Member</label>
                                                 <div class="col-xs-5">
-                                                    <input type="text" class="form-control" name="option[]" title=""/>
+                                                    <input type="text" class="form-control member" name="option[]" title=""/>
                                                 </div>
                                                 <div class="col-xs-4">
                                                     <button type="button" class="btn btn-default addButton"><i class="fa fa-plus"></i></button>
@@ -81,25 +81,25 @@
 
                                         <hr />
 
-                                        <h4>About</h4>
-                                        <fieldset>
-                                            <div class="form-group">
-                                                <label class="col-md-3 control-label" for="groupPurpose">Purpose Info</label>
-                                                <div class="col-md-8">
-                                                    <textarea class="form-control" rows="3" id="groupPurpose" name="groupPurpose"></textarea>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <div class="sky-form">
-                                                    <label class="col-xs-3 control-label">Group Image <small>(Optional)</small></label>
-                                                    <div class="col-md-8">
-                                                        <label for="file" class="input input-file">
-                                                            <input type="file" id="file" name="image">
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </fieldset>
+{#                                        <h4>About</h4>#}
+{#                                        <fieldset>#}
+{#                                            <div class="form-group">#}
+{#                                                <label class="col-md-3 control-label" for="groupPurpose">Purpose Info</label>#}
+{#                                                <div class="col-md-8">#}
+{#                                                    <textarea class="form-control" rows="3" id="groupPurpose" name="groupPurpose"></textarea>#}
+{#                                                </div>#}
+{#                                            </div>#}
+{#                                            <div class="form-group">#}
+{#                                                <div class="sky-form">#}
+{#                                                    <label class="col-xs-3 control-label">Group Image <small>(Optional)</small></label>#}
+{#                                                    <div class="col-md-8">#}
+{#                                                        <label for="file" class="input input-file">#}
+{#                                                            <input type="file" id="file" name="image">#}
+{#                                                        </label>#}
+{#                                                    </div>#}
+{#                                                </div>#}
+{#                                            </div>#}
+{#                                        </fieldset>#}
 
                                         <div class="row">
                                             <div class="col-md-9 col-md-offset-3">
