--- a/fimco/pochi/templates/pochi/home.html
+++ b/fimco/pochi/templates/pochi/home.html
@@ -21,39 +21,14 @@
                     </div>
                 </div>
             </div>
-            <div class="statements">
-                {% for statement in statements|slice:":3" %}
-                    <div class="row statement">
-                        <div class="col-xs-3">
-                            <div class="row">
-                                <div class="col-xs-6 col-md-2 col-lg-2 text-center"
-                                     style="padding: 15px">
-                                    <i class="et-wallet"></i>
-                                </div>
-                                <div class="col-xs-6">
-                                    <div class="row">{{ statement.type }}</div>
-                                    <div class="row">{{ statement.service }}</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-3 col-xs-offset-6">
-                            <div class="row">{{ statement.amount }}</div>
-                            <div class="row">{{ statement.charges }}</div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
             <div class="row margin-top-20 mid-align">
                 <div class="col-xs-12 col-md-4 col-lg-3 col-lg-offset-4">
                     <a href="#" class="btn btn-featured btn-primary">
-                        <span>View full statement</span>
+                        <span>View your statement</span>
                         <i class="et-document"></i>
                     </a>
                 </div>
             </div>
         </div>
     </section>
-{% endblock %}
-{% block scripts %}
-{#    <script type="text/javascript" src="/static/pochi/js/"></script>#}
 {% endblock %}
